# rust_tensorflow_serving_client_example

./: Cargo.toml  README.md
model/1/: fingerprint.pb  saved_model.pb
model/1/variables/: variables.data-00000-of-00001  variables.index
src/: main.rs
training/: training.ipynb
